--- a/index.html
+++ b/index.html
@@ -1,195 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Elizabeth A. Testerman – Christian Ministry & Apologetics</title>
-  <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f7f7f7;
-      color: #222;
-      line-height: 1.6;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elizabeth Testerman Ministries</title>
 
-    header {
-      background: #2d3e50;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
-    nav {
-      background: #1f2a36;
-      padding: 0.7rem;
-      text-align: center;
-    }
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Inter', sans-serif;
+            background-color: #f7f7f7;
+            color: #333;
+            line-height: 1.6;
+        }
 
-    nav a {
-      color: white;
-      margin: 0 1rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
+        header {
+            background-color: #4b2e83;
+            color: white;
+            text-align: center;
+            padding: 70px 20px;
+        }
 
-    nav a:hover {
-      text-decoration: underline;
-    }
+        header h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 3rem;
+            margin-bottom: 10px;
+        }
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem;
-      background: white;
-    }
+        header p {
+            font-size: 1.2rem;
+            max-width: 700px;
+            margin: 0 auto;
+        }
 
-    h2 {
-      color: #2d3e50;
-      border-bottom: 2px solid #e5e5e5;
-      padding-bottom: 0.3rem;
-    }
+        .content {
+            max-width: 900px;
+            margin: 40px auto;
+            background: white;
+            padding: 30px 40px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+        }
 
-    .section {
-      margin-bottom: 3rem;
-    }
+        .photo {
+            text-align: center;
+            margin-bottom: 30px;
+        }
 
-    footer {
-      background: #2d3e50;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 3rem;
-    }
+        .photo img {
+            width: 260px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0,0,0,0.15);
+        }
 
-    .social-links a {
-      display: inline-block;
-      margin-right: 1rem;
-      color: #2d3e50;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    .social-links a:hover {
-      text-decoration: underline;
-    }
-
-    .button {
-      display: inline-block;
-      background: #2d3e50;
-      color: white;
-      padding: 0.7rem 1.2rem;
-      text-decoration: none;
-      border-radius: 4px;
-      font-weight: bold;
-    }
-
-    .button:hover {
-      background: #1b2632;
-    }
-
-    form label {
-      font-weight: bold;
-    }
-
-    form input, form textarea {
-      width: 100%;
-      padding: 0.7rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    form button {
-      background: #2d3e50;
-      color: white;
-      border: none;
-      padding: 0.7rem 1.2rem;
-      cursor: pointer;
-      border-radius: 4px;
-      font-size: 1rem;
-    }
-
-    form button:hover {
-      background: #1b2632;
-    }
-  </style>
+        h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2rem;
+            color: #4b2e83;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
 
-<header>
-  <h1>Elizabeth A. Testerman</h1>
-  <p>Christian Ministry • Apologetics • Outreach to Jehovah's Witnesses</p>
-</header>
+    <header>
+        <h1>Welcome to Elizabeth Testerman Ministries</h1>
+        <p>Sharing faith, hope, and the love of Christ through teaching, encouragement, and biblical truth.</p>
+    </header>
 
-<nav>
-  <a href="#about">About Me</a>
-  <a href="#speaking">Speaking</a>
-  <a href="#links">YouTube & Blog</a>
-  <a href="#contact">Contact</a>
-</nav>
+    <div class="content">
 
-<div class="container">
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBk...RgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIy" alt="Photo of Elizabeth Testerman" style="max-width:200px; float:right; margin:0 0 1rem 1rem; border-radius:8px;"/>
-    <p>
-      Hello! My name is <strong>Elizabeth A. Testerman</strong>. I am a Christian writer, teacher,
-      and ministry leader passionate about helping believers engage lovingly and biblically
-      with Jehovah’s Witnesses and individuals involved in other high-control religious groups.
-    </p>
-    <p>
-      My background includes theological training, apologetics, and years of experience teaching
-      and mentoring Christians who want to grow in discernment and compassion. My goal is to equip
-      the church to share the gospel clearly, confidently, and graciously.
-    </p>
-  </section>
+        <!-- PHOTO SECTION -->
+        <div class="photo">
+            <img src="YOUR-PHOTO-LINK-HERE" alt="Elizabeth Testerman">
+        </div>
 
-  <section id="speaking" class="section">
-    <h2>Speaking & Workshops</h2>
-    <p>
-      I am available for speaking engagements, Bible studies, workshops on reaching Jehovah’s Witnesses,
-      and training sessions for churches and small groups.
-    </p>
-    <p><a class="button" href="#contact">Request a Speaking Date</a></p>
-  </section>
+        <h2>About the Ministry</h2>
+        <p>
+            Elizabeth Testerman Ministries is dedicated to helping believers grow in their relationship with God,
+            understand Scripture deeply, and apply biblical truth to everyday life. Through teaching, writing,
+            and compassion-filled encouragement, Elizabeth seeks to shine the light of Christ wherever He leads.
+        </p>
 
-  <section id="links" class="section">
-    <h2>YouTube & Resources</h2>
-    <div class="social-links">
-      <a href="https://www.youtube.com/@testallthings4Him" target="_blank">My YouTube Channel</a>
-      <a href="https://www.amazon.com/Reasoning-Scriptures-Jehovahs-Witnesses-Rhodes/dp/0736924515" target="_blank">Reasoning from the Scriptures (Ron Rhodes)</a>
-      <a href="https://www.amazon.com/Kingdom-Cults-Definitive-Work-Subject/dp/0764232657" target="_blank">The Kingdom of the Cults</a>
-      <a href="https://ssqt.co/mQIR5OQ" target="_blank">Additional Resources</a>
     </div>
-  </section>
-
-  <section id="contact" class="section">
-    <h2>Contact Me</h2>
-    <p>If you’d like to reach out for speaking, questions, or ministry opportunities, please fill out the form below.</p>
-
-    <form>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required />
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
-
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-  <section id="faith" class="section">
-    <h2>Statement of Faith</h2>
-    <p>You can fill this section in with your doctrinal statement. If you'd like, I can help you structure a clear, well-organized statement based on historic Christian orthodoxy.</p>
-  </section>
-</div>
-<footer>
-  <p>© 2025 Elizabeth A. Testerman. All rights reserved.</p>
-</footer>
 
 </body>
 </html>
+
