--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
         <!-- PHOTO SECTION -->
         <div class="photo">
-            <img src="YOUR-PHOTO-LINK-HERE" alt="Elizabeth Testerman">
+            <img src="IMG_6194%20Beth.jpg" alt="Elizabeth Testerman">
+
         </div>
 
         <h2>About the Ministry</h2>
