--- a/index.html
+++ b/index.html
@@ -66,10 +66,18 @@
 </head>
 <body>
 
-    <header>
-        <h1>Welcome to Elizabeth Testerman Ministries</h1>
-        <p>Sharing faith, hope, and the love of Christ through teaching, encouragement, and biblical truth.</p>
-    </header>
+   <header>
+    <h1>Welcome to Elizabeth Testerman Ministries</h1>
+    <p>Sharing faith, hope, and the love of Christ through teaching, encouragement, and biblical truth.</p>
+
+    <!-- Simple navigation -->
+    <p>
+        <a href="speaking-contact.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none;">
+            Speaking & Contact
+        </a>
+    </p>
+</header>
+
 
     <div class="content">
 
