--- a/speaking-contact.html
+++ b/speaking-contact.html
@@ -121,7 +121,7 @@
     <div class="contact-box">
         <p class="contact-label">To inquire about availability or invite Elizabeth to speak:</p>
         <p>
-            📧 Email: <a href="buggingtheteachernow@gmail.com">YOUR-EMAIL-HERE</a><br>
+            📧 Email: <a href="buggingtheteachernow@gmail.com">YOUR-EMAIL-HERE<a href="mailto:Buggingtheteachernow@gmail.com">Buggingtheteachernow@gmail.com</a>
             (Please include your church/organization name, location, possible dates, and a brief
             description of the event.)
         </p>
