--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
 
     <!-- Simple navigation -->
     <p>
-        <a href="speaking-contact.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none;">
-            Speaking & Contact
-        </a>
-    </p>
+    <a href="speaking-contact.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none; margin-right: 20px;">
+        Speaking & Contact
+    </a>
+
+    <a href="testimony.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none;">
+        My Testimony
+    </a>
+</p>
+
 </header>
 
 
