--- a/testimony.html
+++ b/testimony.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Testimony – Elizabeth Testerman</title>
 
-    <!-- Fonts to match your website -->
+    <!-- Fonts to match your site -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
     <style>
@@ -14,42 +14,72 @@
             font-family: 'Inter', sans-serif;
             background-color: #f7f7f7;
             color: #333;
-            line-height: 1.6;
+            line-height: 1.7;
         }
 
         header {
             background-color: #4b2e83;
             color: white;
             text-align: center;
-            padding: 50px 20px;
+            padding: 55px 20px;
         }
 
         header h1 {
             font-family: 'Playfair Display', serif;
             font-size: 2.6rem;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
         }
 
         header p {
-            font-size: 1.1rem;
+            font-size: 1.05rem;
             max-width: 750px;
             margin: 0 auto;
         }
 
         .content {
             max-width: 900px;
-            margin: 40px auto;
+            margin: 40px auto 50px;
             background: white;
             padding: 35px 45px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
         }
 
+        .scripture {
+            border-left: 4px solid #4b2e83;
+            background-color: #f2eefb;
+            padding: 15px 20px;
+            border-radius: 6px;
+            margin-bottom: 25px;
+            font-style: italic;
+        }
+
+        .scripture-ref {
+            display: block;
+            margin-top: 8px;
+            font-weight: 600;
+            font-style: normal;
+            color: #4b2e83;
+        }
+
         h2 {
             font-family: 'Playfair Display', serif;
             font-size: 1.8rem;
             color: #4b2e83;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+        }
+
+        p {
+            margin-bottom: 16px;
+            font-size: 1rem;
+        }
+
+        .pullquote {
+            margin: 25px 0;
+            padding: 18px 22px;
+            border-left: 4px solid #4b2e83;
+            background-color: #faf6ff;
+            font-style: italic;
         }
 
         .back-link {
@@ -66,12 +96,14 @@
             text-decoration: underline;
         }
 
-        .placeholder {
-            padding: 20px;
-            background-color: #f1ecfc;
-            border-left: 4px solid #4b2e83;
-            border-radius: 6px;
-            margin-top: 15px;
+        @media (max-width: 600px) {
+            .content {
+                padding: 25px 20px;
+            }
+
+            header h1 {
+                font-size: 2.1rem;
+            }
         }
     </style>
 </head>
@@ -79,20 +111,48 @@
 
 <header>
     <h1>My Testimony</h1>
-    <p>How God met me, changed me, and continues to lead me.</p>
+    <p>How God led me out of a high-control religious group and into the freedom of knowing Jesus Christ.</p>
 </header>
 
 <div class="content">
-    <h2>Coming Soon</h2>
+
+    <div class="scripture">
+        “You shall love the Lord your God with all your heart and with all your soul and with all your mind.”
+        <span class="scripture-ref">Matthew 22:37</span>
+    </div>
+
     <p>
-        I am currently writing my personal testimony so I can share my journey of faith
-        in a way that honors Christ and encourages others. Please check back soon!
+        I cannot remember a time in my life when I did not love God with all my heart. What I did not understand, however, was that the God I loved so deeply was being presented to me through the lens of a high-control religious organization. I spent
+        <strong>25 years as one of Jehovah’s Witnesses</strong>. I was taught that Jehovah had created the heavens and the earth and given many good things—but I also learned to see Him as a hard, exacting God who was difficult to please.
     </p>
 
-    <div class="placeholder">
-        <strong>When you are ready:</strong><br>
-        You will paste your full testimony into this section.
+    <p>
+        From a young age, I believed I needed to be willing to turn my back on family and friends if they ever walked away from the organization. Any “wrong” decision of my own could result in <strong>shunning</strong>, leaving me isolated from everyone I knew and loved.
+        I spent countless hours going door to door, sharing what we called <em>the good news.</em> Over time, I began to realize it wasn’t truly good news at all—it came with unbearable burdens and a system that broke apart families in the name of God.
+    </p>
+
+    <p>
+        Eventually, questions began to stir in my heart—questions about the doctrines and teachings I had been told never to question. As I sought answers, God in His mercy led me not to a new organization, but to
+        <strong>the real and living Savior, Jesus Christ</strong>. I surrendered my life to Him, and everything changed.
+    </p>
+
+    <div class="pullquote">
+        I discovered a God who is not distant and demanding, but a loving Father full of <strong>Grace and Truth</strong>.
     </div>
+
+    <p>
+        I have now been out of the organization longer than I was in it. I understand the tactics that high-control religious groups use to keep people trapped, and my heart aches for those still inside. Today, I am a
+        <strong>seminary student pursuing my Master of Divinity</strong>, loving the Lord my God with all my heart, soul, mind, and strength—just as Matthew 22:37 calls us to do.
+    </p>
+
+    <p>
+        My deepest desire is to point as many people as I can to <strong>Jesus Christ, the true Savior</strong>, who offers freedom, forgiveness, and eternal life. I am passionate about equipping Christians to speak with Jehovah’s Witnesses in ways that encourage sincere
+        questions—questions that can open the door for someone else to encounter <strong>the real Jesus</strong> and know Him as their Lord and Savior.
+    </p>
+
+    <p>
+        All glory to God, who rescues, restores, and sets captives free.
+    </p>
 
     <div class="back-link">
         <a href="index.html">← Back to Home</a>
@@ -101,3 +161,4 @@
 
 </body>
 </html>
+
