--- a/speaking-contact.html
+++ b/speaking-contact.html
@@ -87,6 +87,21 @@
             content: "• ";
             color: #4b2e83;
         }
+
+        .intro-box {
+            margin-top: 15px;
+            margin-bottom: 25px;
+            padding: 15px 20px;
+            background-color: #faf6ff;
+            border-radius: 6px;
+            border-left: 4px solid #4b2e83;
+        }
+
+        @media (max-width: 600px) {
+            .content {
+                padding: 25px 20px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -94,12 +109,26 @@
 <header>
     <h1>Speaking & Contact</h1>
     <p>
-        Thank you for your interest in having Elizabeth speak at your church,
+        Thank you for your interest in having Elizabeth speak or teach at your church,
         women’s event, small group, or training session.
     </p>
 </header>
 
 <div class="content">
+
+    <h2>Speaker Introduction</h2>
+    <div class="intro-box">
+        <p>
+            Elizabeth Testerman spent 25 years inside the Jehovah’s Witnesses organization before God opened her eyes to the
+            true Gospel of Jesus Christ. After questioning the teachings she had been warned never to doubt, she encountered
+            not a distant, demanding deity, but a <strong>loving Father full of Grace and Truth</strong>. Today, Elizabeth is
+            a seminary student pursuing her Master of Divinity and is passionate about pointing others to the freedom found
+            only in Jesus. She helps Christians engage Jehovah’s Witnesses with compassion and thoughtful questions, opening
+            doors for conversation and, Lord willing, transformation. Her mission is to love the Lord with all her heart,
+            soul, mind, and strength, and to help others come to know <strong>the real Jesus</strong> as their Savior.
+        </p>
+    </div>
+
     <h2>Speaking Topics</h2>
     <p>
         Elizabeth is available for teaching and workshops related to:
@@ -121,7 +150,8 @@
     <div class="contact-box">
         <p class="contact-label">To inquire about availability or invite Elizabeth to speak:</p>
         <p>
-            📧 Email: <a href="mailto:Buggingtheteachernow@gmail.com">Buggingtheteachernow@gmail.com</a>
+            📧 Email:
+            <a href="mailto:Buggingtheteachernow@gmail.com">Buggingtheteachernow@gmail.com</a><br>
             (Please include your church/organization name, location, possible dates, and a brief
             description of the event.)
         </p>
@@ -134,3 +164,4 @@
 
 </body>
 </html>
+
