--- a/index.html
+++ b/index.html
@@ -63,33 +63,30 @@
 </head>
 <body>
 
-   <header class="hero">
-  <div class="hero-content">
-    <h1>Elizabeth A. Testerman</h1>
-    <p class="hero-subtitle">
-      Founder, <span class="brand-name">Test All Things Ministries</span>
-    </p>
-    <p class="tagline">
-      Equipping the Church with wisdom, discernment, and hope.
-    </p>
-  </div>
-</header> 
+  <header>
+  <h1>Elizabeth A. Testerman</h1>
+  <p class="hero-subtitle">
+    Founder, <span class="brand-name">Test All Things Ministries</span>
+  </p>
 
-    <!-- Simple navigation -->
-    <p>
+  <p class="tagline">
+    Equipping the Church with wisdom, discernment, and hope.
+  </p>
+
+  <!-- Simple navigation -->
+  <p>
     <a href="speaking-contact.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none; margin-right: 20px;">
-        Speaking & Contact
+      Speaking & Contact
     </a>
 
     <a href="testimony.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none;">
-        My Testimony
+      My Testimony
     </a>
-</p>
-
+  </p>
 </header>
 
+<div class="content">
 
-    <div class="content">
 
         <!-- PHOTO SECTION -->
         <div class="photo">
