--- a/index.html
+++ b/index.html
@@ -64,26 +64,27 @@
 <body>
 
   <header>
-  <h1>Elizabeth A. Testerman</h1>
-  <p class="hero-subtitle">
-    Founder, <span class="brand-name">Test All Things Ministries</span>
-  </p>
+ <header>
+  <div class="hero">
+    <h1>Elizabeth A. Testerman</h1>
 
-  <p class="tagline">
-    Equipping the Church with wisdom, discernment, and hope.
-  </p>
+    <p class="hero-subtitle">
+      Founder,
+      <span class="brand-name">Test All Things Ministries</span>
+    </p>
 
-  <!-- Simple navigation -->
-  <p>
-    <a href="speaking-contact.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none; margin-right: 20px;">
-      Speaking & Contact
-    </a>
+    <p class="tagline">
+      Equipping the Church with wisdom, discernment, and hope.
+    </p>
 
-    <a href="testimony.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none;">
-      My Testimony
-    </a>
-  </p>
+    <p class="nav-links">
+      <a href="speaking-contact.html">Speaking &amp; Contact</a>
+      <a href="testimony.html">My Testimony</a>
+    </p>
+  </div>
 </header>
+
+
 
 <div class="content">
 
