--- a/index.html
+++ b/index.html
@@ -67,19 +67,29 @@
 <body>
 
    <header>
-    <h1>Welcome to Elizabeth Testerman Ministries</h1>
-    <p>Sharing faith, hope, and the love of Christ through teaching, encouragement, and biblical truth.</p>
+    <h1>Elizabeth A. Testerman</h1>
 
-    <!-- Simple navigation -->
-    <p>
-    <a href="speaking-contact.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none; margin-right: 20px;">
-        Speaking & Contact
-    </a>
+<h1>Elizabeth A. Testerman</h1>
 
-    <a href="testimony.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none;">
-        My Testimony
-    </a>
+<p class="hero-subtitle">
+  Founder, <span class="brand-name">Test All Things Ministries</span>
 </p>
+
+<p class="tagline">
+  Equipping the Church with wisdom, discernment, and hope.
+</p>
+
+<!-- Simple navigation -->
+<p>
+  <a href="speaking-contact.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none; margin-right: 20px;">
+    Speaking & Contact
+  </a>
+
+  <a href="testimony.html" style="color: #ffe9a9; font-weight: 600; text-decoration: none;">
+    My Testimony
+  </a>
+</p>
+
 
 </header>
 
